# Planify

./: .gitignore  .graphifyignore  phase.md  plan.md  readme.md  temp.html
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  logging_config.py  main.py
backend/app/agent/: __init__.py  db.py  graph.py  llm.py  main.py  prompts.py  router.py  schemas.py  state.py  test_router.py  test_workflow_guards.py  web_search.py  workflow_guards.py
backend/app/agent/nodes/: __init__.py  conversation_understanding.py  project_workflow.py  report_generator.py
backend/app/agent/rag/: __init__.py  embeddings.py  retrieve.py  vector_store.py
backend/app/agent/rag/loaders/: __init__.py  pdf.py
backend/app/agents/: checkpointer.py  clarification.py  feasibility_agent.py  final_report_agent.py  input_understanding.py  llm.py  prd_agent.py  roadmap_agent.py  roi_agent.py  state.py  workflow.py
backend/app/db/: __init__.py  init_db.py  mongodb.py
backend/app/middleware/: auth.py
backend/app/routes/: auth.py  chat.py  dashboard.py  export.py  files.py  projects.py  reports.py
backend/app/schemas/: agents.py  chat.py  context.py  project.py
backend/app/services/: chat_service.py  file_service.py  project_context.py
backend/app/utils/: objectid.py
backend/graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
backend/tests/: test_health.py
docs/: api.md  architecture.md  schemas.md
frontend/: check-db.js  package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx
frontend/app/(auth)/forgot-password/: page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/set-password/: page.tsx
frontend/app/(root)/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: ClarificationPanel.tsx  ProjectCard.tsx  navbar.tsx
frontend/components/auth/: AppEntryCta.tsx  AuthShell.tsx  ChangePasswordOtpForm.tsx
frontend/components/dashboard/: AssetsView.tsx  ProjectsView.tsx  SettingsView.tsx
frontend/components/landing/: footer.tsx  mainSection.tsx  navbar.tsx
frontend/components/reports/: FeasibilityViewer.tsx  PRDViewer.tsx  ROIViewer.tsx  ReportMarkdownBody.tsx  RoadmapViewer.tsx
frontend/components/ui/: icons.tsx
frontend/components/workspace/: AgentTimeline.tsx  ChatInput.tsx  DiscoveryOptionsPanel.tsx  RightPanel.tsx  WorkspaceClarificationPanel.tsx
frontend/graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
frontend/graphify-out/cache/: stat-index.json
frontend/hooks/: useChatScroll.ts  useSpeechRecognition.ts
frontend/lib/: api.ts  auth.ts  mail.ts  mongodb.ts  password-auth.ts  password-crypto.ts  reports.ts  routes.ts
frontend/types/: next-auth.d.ts
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/2026-07-11/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-07-12/: .graphify_labels.json  GRAPH_REPORT.md  cost.json  graph.json  manifest.json
graphify-out/cache/: stat-index.json
(+17 files in other folders)
