[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain-core>=1.4.9",
    "langchain-google-genai>=2.0.0",
    "langchain-mistralai>=0.2.0",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-mongodb>=0.4.0",
    "motor>=3.6.0",
    "pydantic>=2.13.4",
    "pymongo[srv]>=4.10.0",
    "python-dotenv>=1.2.2",
]
