[project]
name = "planify-backend"
version = "0.1.0"
description = "Planify — AI Project Intelligence Platform, FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
    "motor>=3.6.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "pymongo[srv]>=4.10.0",
    "python-dotenv>=1.2.2",
    "python-json-logger>=4.1.0",
    "python-multipart>=0.0.32",
    # ── AI / LangGraph ──────────────────────────────────────────
    "langchain-core>=1.4.9",
    "langchain-google-genai>=2.0.0",
    "langchain-mistralai>=0.2.0",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-mongodb>=0.4.0",
    # ── Export (optional at runtime) ────────────────────────────
    "weasyprint>=62.0",
    "python-docx>=1.1.0",
    "ddgs>=9.14.4",
    "langchain-community>=0.3.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
